# kakeibo-journal

./: README.md  compose.yaml
services/backend/: pyproject.toml
services/backend/migrations/models/: 0_20240208084512_init.py  0_20240212090037_init.py
services/backend/src/: main.py
services/backend/src/core/: config.py  dependencies.py  jwthandler.py  models.py  security.py
services/backend/src/crud/: users.py
services/backend/src/routers/: login.py  users.py
services/backend/src/schemas/: token.py  users.py
services/backend/tests/: conftest.py  test_users.py
services/frontend/: package-lock.json
services/frontend/src/: main.js
services/frontend/src/router/: index.js
services/frontend/src/store/: index.js
services/frontend/src/store/modules/: entries.js  users.js
services/frontend/src/views/: DashboardView.vue  HomeView.vue  LoginView.vue  RegisterView.vue
