[tool.poetry]
name = "kakeibo-journal"
version = "0.1.0"
description = ""
authors = ["Laurens Sandt <laurens.sandt@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "*"
fastapi = "*"
tortoise-orm = "*"
aerich = "*"
asyncpg = "*"


[tool.poetry.group.dev.dependencies]
httpx = "*"
pytest = "*"
ruff = "*"
mypy = "*"

[tool.ruff.format]
quote-style = "single"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
